# project-goapi

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: go.yaml
adapter/: README.md
docs/: README.md
entity/domain/user/biz/: BUILD.bazel  interface.go  mock_interface.go
entity/domain/user/model/: BUILD.bazel  user.pb.go
internal/app/domain/user/biz/: BUILD.bazel  impl.go  impl_integration_test.go  impl_test.go  wire.go  wire_gen.go
internal/app/domain/user/biz/db/: BUILD.bazel  impl.go  impl_test.go  interface.go  mock_interface.go  wire.go  wire_gen.go
internal/pkg/config/: BUILD.bazel  config.go
internal/pkg/errorx/: 400.go  404.go  500.go  BUILD.bazel
internal/pkg/log/: BUILD.bazel
internal/pkg/storage/mongodb/: BUILD.bazel  mongodb.go
pb/domain/user/model/: user.proto
pkg/contextx/: BUILD.bazel  contextx.go
pkg/er/: BUILD.bazel  er.go  middlewares.go
scripts/: print-workspace-status.sh
