load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mongodb",
    srcs = ["mongodb.go"],
    importpath = "github.com/blackhorseya/project-goapi/internal/pkg/storage/mongodb",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_wire//:wire",
        "@com_github_hashgreen_hg_goapi//pkg/contextx",
        "@com_github_pkg_errors//:errors",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
