load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "biz",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/project-goapi/internal/app/domain/user/biz",
    visibility = ["//:__subpackages__"],
    deps = [
        "//entity/domain/user/biz",
        "//entity/domain/user/model",
        "//internal/app/domain/user/biz/db",
        "//internal/pkg/errorx",
        "//internal/pkg/storage/mongodb",
        "//pkg/contextx",
        "@com_github_google_wire//:wire",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "biz_test",
    srcs = [
        "impl_integration_test.go",
        "impl_test.go",
    ],
    embed = [":biz"],
    deps = [
        "//entity/domain/user/biz",
        "//entity/domain/user/model",
        "//internal/app/domain/user/biz/db",
        "//internal/pkg/storage/mongodb",
        "//pkg/contextx",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//suite",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_uber_go_zap//:zap",
    ],
)
