load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "impl.go",
        "interface.go",
        "mock_interface.go",
    ],
    importpath = "github.com/blackhorseya/project-goapi/internal/app/domain/user/biz/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "//entity/domain/user/model",
        "//pkg/contextx",
        "@com_github_golang_mock//gomock",
    ],
)
