load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = [
        "impl.go",
        "interface.go",
        "mock_interface.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/project-goapi/internal/app/domain/user/biz/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "//entity/domain/user/model",
        "//internal/pkg/storage/mongodb",
        "//pkg/contextx",
        "@com_github_golang_mock//gomock",
        "@com_github_google_wire//:wire",
        "@com_github_pkg_errors//:errors",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)

go_test(
    name = "db_test",
    srcs = ["impl_test.go"],
    embed = [":db"],
    deps = [
        "//entity/domain/user/model",
        "//internal/pkg/storage/mongodb",
        "//pkg/contextx",
        "@com_github_stretchr_testify//suite",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_zap//:zap",
    ],
)
